--- a/.github/workflows/test-feature-branch.yml
+++ b/.github/workflows/test-feature-branch.yml
@@ -7,5 +7,5 @@ on:
 jobs:
   quality:
     name: Run unit tests
-    uses: telicent-oss/shared-workflows/.github/workflows/javascript-test-feature-branch.yml@main
+    uses: telicent-oss/shared-workflows/.github/workflows/javascript-test-feature-branch.yml@ci/clean-javascript-test-feature-branch
     secrets: inherit
