--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-spring/web": "9.7.3",
     "@tanstack/react-query": "^5.18.0",
     "@telicent-oss/ontologyservice": "^0.0.1",
+    "axios": "^1.7.2",
     "classnames": "^2.3.1",
     "d3": "^7.8.2",
     "lodash": "^4.17.21",
@@ -29,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "7.1.0",
+    "react-router-dom": "^6.23.1",
     "typescript": "*",
     "zod": "^3.21.4"
   },
